# semantic_advination_core

./: .env.example  .gitignore  README.md  __init__.py  _project_files.txt  _project_tree.txt  build-project.ps1  chat1.txt  config.py  create-core-files.ps1  deepseek_python_20260103_35b946.py  demo_commands.json  git_.txt  main.py  main_windows.py  project_files_report.txt  project_tree.txt  pyproject.toml  requirements.txt  session_history.json  setup.py  simple_main.py
adapters/: api_adapter.py  base_adapter.py  shell_adapter.py
config/: defaults.yaml  thresholds.py
core/: __init__.py  adivinator.py  composer.py  models.py  orchestrator.py  validator.py
scripts/: setup.py
storage/: __init__.py  command_db.py  deferred_manager.py  history_logger.py  trie_storage.py
utils/: metrics.py  serializers.py  similarity.py  tokenizer.py
