[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-advination-core"
version = "1.0.0"
description = "Ядро семантической адивинации команд для Jarvis-подобных систем"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-levenshtein>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.3", "pytest-asyncio>=0.21.1"]

[project.urls]
Homepage = "https://github.com/yourusername/semantic_advination_core"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "storage*", "adapters*", "config*"]